syntax = "proto3";

option java_package = "com.haberdashervcs.server.protobuf";
option java_outer_classname = "FilesProto";
option java_multiple_files = false;


message FileEntry {
    bytes contents = 1;
}
